# Gaze20

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
doc/: PRODUCTION-READINESS.md  RELEASE.md
public/: overlay.html
scripts/: generate-icon.mjs  optimize_eyes.py
src/: App.tsx  domain.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  engine.rs  lib.rs  main.rs  native_reminder.rs
