[package]
name = "gaze20"
version = "0.3.0"
description = "远眺 Gaze20 desktop eye-care reminder"
authors = ["远眺 Gaze20"]
edition = "2021"

[lib]
name = "gaze20_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
# File + stderr logging so a packaged build (GUI subsystem swallows stdout) is
# still diagnosable.
log = "0.4"
tauri-plugin-log = "2"
# Auto-update plumbing. Inert until the user configures plugins.updater (pubkey +
# endpoints) — see doc/RELEASE.md.
tauri-plugin-updater = "2"
# Native save/open dialogs — WebView2 does not trigger blob-anchor downloads, so the
# data export/import use real OS file dialogs + Rust-side file IO instead.
tauri-plugin-dialog = "2"
# Local data layer. `bundled` compiles SQLite in-tree so there is no system
# dependency to ship on Windows.
rusqlite = { version = "0.32", features = ["bundled"] }
# Keep the Windows WebView stack on the allocator versions that Tauri 2.11
# currently builds cleanly with. Newer transitive releases can mix allocator
# traits across brotli crates.
alloc-no-stdlib = "=2.0.4"
alloc-stdlib = "=0.2.2"
brotli-decompressor = "=5.0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.55"
